--- a/nextcloud-app/nginx-config.yaml
+++ b/nextcloud-app/nginx-config.yaml
@@ -17,17 +17,16 @@ data:
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Host $host;
                 proxy_set_header X-Forwarded-Proto $scheme;
 
                 rewrite ^/nextcloud(/.*)$ $1 break; # Quita el prefijo "/nextcloud"
-                # Permitir todos los métodos HTTP
-    proxy_http_version 1.1;
-    client_max_body_size 512M;
+                proxy_http_version 1.1;
+                client_max_body_size 512M;
 
-    # Aumentar tiempos de espera
-    proxy_connect_timeout 60s;
-    proxy_read_timeout 60s;
-    proxy_send_timeout 60s;
+                proxy_connect_timeout 60s;
+                proxy_read_timeout 60s;
+                proxy_send_timeout 60s;
           }
         }
     }
